design he hero section

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,6 +32,7 @@
       "badge": "SERIOUS MATCHMAKING",
       "title": "A Love That Lasts a Lifetime",
       "description": "Jodohmu is where serious commitment meets modern matchmaking. We provide a heartfelt, premium service to help you find your soulmate in a way that honors your faith and values.",
+      "tagline": "Taaruf-guided introductions for sincere hearts ready for marriage.",
       "cta": "Begin Your Journey",
       "secondaryCta": "Talk to an Advisor",
       "highlight": {
