--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -32,6 +32,7 @@
       "badge": "PENCARIAN JODOH SERIUS",
       "title": "Cinta Seumur Hidup",
       "description": "Jodohmu adalah tempat komitmen serius bertemu dengan perjodohan modern. Kami menyediakan layanan premium yang tulus untuk membantu Anda menemukan belahan jiwa dengan cara yang menghormati iman dan nilai-nilai Anda.",
+      "tagline": "Taaruf yang dibimbing untuk hati-hati tulus yang siap menikah.",
       "cta": "Mulai Perjalanan Anda",
       "secondaryCta": "Bicara dengan Advisor",
       "highlight": {
