--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -287,9 +287,9 @@
     "connect": {
       "title": "Terhubung dengan Kami",
       "description": "Tetap dekat dengan komunitas JodohMu dan dapatkan kisah inspiratif, acara, serta tips yang kami kurasi untuk perjalanan Anda.",
-      "email": "Email",
-      "phone": "Telepon",
-      "whatsapp": "WhatsApp"
+      "email": "info@jodohmu.com",
+      "phone": "+6281327054561",
+      "whatsapp": "6281327054561"
     },
     "subfooter": {
       "copyright": "© {{year}} Jodohmu",
